@@ -1,5 +1,5 @@
 /*
- * "$Id: cert.c,v 1.19 2004/04/20 13:34:49 mike Exp $"
+ * "$Id: cert.c,v 1.20 2004/06/29 03:27:35 mike Exp $"
  *
  *   Authentication certificate routines for the Common UNIX
  *   Printing System (CUPS).
@@ -16,9 +16,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -293,5 +293,5 @@ InitCerts(void)
 
 
 /*
- * End of "$Id: cert.c,v 1.19 2004/04/20 13:34:49 mike Exp $".
+ * End of "$Id: cert.c,v 1.20 2004/06/29 03:27:35 mike Exp $".
  */
