@@ -1,5 +1,5 @@
 /*
- * "$Id: cups-lpd.c,v 1.45 2004/03/19 11:35:10 mike Exp $"
+ * "$Id: cups-lpd.c,v 1.46 2004/06/29 03:27:35 mike Exp $"
  *
  *   Line Printer Daemon interface for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -1423,5 +1423,5 @@ smart_gets(char *s,			/* I - Pointer to line buffer */
 
 
 /*
- * End of "$Id: cups-lpd.c,v 1.45 2004/03/19 11:35:10 mike Exp $".
+ * End of "$Id: cups-lpd.c,v 1.46 2004/06/29 03:27:35 mike Exp $".
  */
