@@ -1,5 +1,5 @@
 /*
- * "$Id: cups-polld.c,v 1.23 2004/02/25 20:14:53 mike Exp $"
+ * "$Id: cups-polld.c,v 1.24 2004/06/29 03:27:35 mike Exp $"
  *
  *   Polling daemon for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -407,5 +407,5 @@ poll_server(http_t      *http,		/* I - HTTP connection */
 
 
 /*
- * End of "$Id: cups-polld.c,v 1.23 2004/02/25 20:14:53 mike Exp $".
+ * End of "$Id: cups-polld.c,v 1.24 2004/06/29 03:27:35 mike Exp $".
  */
