@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.132 2004/06/28 23:31:33 mike Exp $"
+ * "$Id: dirsvc.c,v 1.133 2004/06/29 03:27:35 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -1963,5 +1963,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.132 2004/06/28 23:31:33 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.133 2004/06/29 03:27:35 mike Exp $".
  */
