@@ -1,5 +1,5 @@
 /*
- * "$Id: file.c,v 1.7 2004/02/25 20:14:53 mike Exp $"
+ * "$Id: file.c,v 1.8 2004/06/29 03:27:35 mike Exp $"
  *
  *   File functions for the Common UNIX Printing System (CUPS).
  *
@@ -20,9 +20,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -981,5 +981,5 @@ cups_write(int        fd,		/* I - File descriptor */
 
 
 /*
- * End of "$Id: file.c,v 1.7 2004/02/25 20:14:53 mike Exp $".
+ * End of "$Id: file.c,v 1.8 2004/06/29 03:27:35 mike Exp $".
  */
