@@ -1,5 +1,5 @@
 /*
- * "$Id: filter.c,v 1.11 2004/02/25 20:14:53 mike Exp $"
+ * "$Id: filter.c,v 1.12 2004/06/29 03:27:35 mike Exp $"
  *
  *   File type conversion routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -322,5 +322,5 @@ lookup(mime_t      *mime,	/* I - MIME database */
 
 
 /*
- * End of "$Id: filter.c,v 1.11 2004/02/25 20:14:53 mike Exp $".
+ * End of "$Id: filter.c,v 1.12 2004/06/29 03:27:35 mike Exp $".
  */
