@@ -1,5 +1,5 @@
 /*
- * "$Id: job.c,v 1.226 2004/04/20 13:34:49 mike Exp $"
+ * "$Id: job.c,v 1.227 2004/06/29 03:27:35 mike Exp $"
  *
  *   Job management routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -2753,5 +2753,5 @@ set_hold_until(job_t *job, 		/* I - Job to update */
 
 
 /*
- * End of "$Id: job.c,v 1.226 2004/04/20 13:34:49 mike Exp $".
+ * End of "$Id: job.c,v 1.227 2004/06/29 03:27:35 mike Exp $".
  */
