@@ -1,5 +1,5 @@
 /*
- * "$Id: log.c,v 1.40 2004/04/20 13:34:49 mike Exp $"
+ * "$Id: log.c,v 1.41 2004/06/29 03:27:35 mike Exp $"
  *
  *   Log file routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -528,5 +528,5 @@ check_log_file(cups_file_t **log,	/* IO - Log file */
 
 
 /*
- * End of "$Id: log.c,v 1.40 2004/04/20 13:34:49 mike Exp $".
+ * End of "$Id: log.c,v 1.41 2004/06/29 03:27:35 mike Exp $".
  */
