@@ -1,5 +1,5 @@
 /*
- * "$Id: main.c,v 1.118 2004/05/27 18:17:54 mike Exp $"
+ * "$Id: main.c,v 1.119 2004/06/29 03:27:35 mike Exp $"
  *
  *   Scheduler main loop for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -1316,5 +1316,5 @@ usage(void)
 
 
 /*
- * End of "$Id: main.c,v 1.118 2004/05/27 18:17:54 mike Exp $".
+ * End of "$Id: main.c,v 1.119 2004/06/29 03:27:35 mike Exp $".
  */
