@@ -1,5 +1,5 @@
 /*
- * "$Id: quotas.c,v 1.10 2004/02/25 20:14:53 mike Exp $"
+ * "$Id: quotas.c,v 1.11 2004/06/29 03:27:35 mike Exp $"
  *
  *   Quota routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -234,5 +234,5 @@ compare(const quota_t *q1,		/* I - First quota record */
 
 
 /*
- * End of "$Id: quotas.c,v 1.10 2004/02/25 20:14:53 mike Exp $".
+ * End of "$Id: quotas.c,v 1.11 2004/06/29 03:27:35 mike Exp $".
  */
